Address more comments